# Jpeg

./: .gitignore  CMakeLists.txt  Makefile  README.md  corefile.766937  corefile.767174  corefile.767487  corefile.767696  main.cpp
cmake/: create_library.cmake
include/clitool/: jpeg_cli.h
include/clitools/: huffman_cli.h
include/colorspaceconversion/: colorspace_conversion.h  colorspaceconversion.h
include/entropyencoding/: huffman.h
include/jpeg/: jpeg.h
include/payloadextraction/: payload_extraction.h
include/utils/: logger.h  utils.h
src/clitool/: jpeg.cpp  jpeg_cli.cpp
src/clitools/: huffman_cli.cpp  jpeg_cli.cpp
src/colorspaceconversion/: colorspace_conversion.cpp  colorspaceconversion.cpp
src/entropyencoding/: huffman.cpp
src/jpeg/: jpeg.cpp
src/payloadextraction/: payload_extraction.cpp
testing/huffman/: ac_lum_bits.txt  ac_lum_huffval.txt  bits.txt  dc_chr_bits.txt  dc_lum_huffval.txt
